# Software-construction-lab

./: CMakeLists.txt  README.md  settings.xml
app/: CMakeLists.txt  main.cpp
include/: abstract_fabrican.h  apartment.h  config.h  config_TEMP.h  furniture.h  plan.h  room_objects.h  settings.h
src/: CMakeLists.txt  apartment.cpp  config.cpp  furniture.cpp  plan.cpp  room_objects.cpp  settings.cpp
